--- a/templates/conference/index.html.twig
+++ b/templates/conference/index.html.twig
@@ -51,14 +51,14 @@
 
 {% block body %}
 
-    <!--<h1>HOLA {{ name }}</h1> Esta es la variable retornada en el controler
+    <!--<h1>HOLA </h1> Esta es la variable retornada en el controler
     <img src="/public/imagenes/z3wdizpl92g81.jpg"/>-->
     <ul>
         <li style ="--clr:#00ade1;">
-            <a href="#" data-text="&nbsp;Inicio">&nbsp;Inicio&nbsp;</a>
+            <a href="/lucky/number" data-text="&nbsp;Inicio">&nbsp;Inicio&nbsp;</a>
         </li>
         <li style ="--clr:#ff6493;">
-            <a href="#" data-text="&nbsp;Perfil">&nbsp;Perfil&nbsp;</a>
+            <a href="/redi" data-text="&nbsp;Perfil">&nbsp;Perfil&nbsp;</a>
         </li>
         <li style ="--clr:#ffdd1c;">
             <a href="#" data-text="&nbsp;Servicios">&nbsp;Servicios&nbsp;</a>
