--- a/templates/conference/calculadora.html.twig
+++ b/templates/conference/calculadora.html.twig
@@ -14,7 +14,7 @@
                     justify-content: center;
                     align-items: center;
                     min-height: 100vh;
-                    background: #252839;
+                    background: #5eb5e0;
                 }
 
     </style>
@@ -23,11 +23,12 @@
 
 {% block body %}
 
-    {%  set Variabledeprueba = 'Hola esto es una variable de prueba' %}
-    {{ Variabledeprueba }} <br>
-    <h1>El numero aleatorio es: {{ number }}</h1>
+
 
     <ul>
+        <li>
+            {{ sumadenumeros }} <br>
+        </li>
         <li style ="--clr:#00ade1;">
             <a href="/" data-text="&nbsp;Inicio">&nbsp;Volver al inicio&nbsp;</a>
         </li>
